deploy/base/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: k8s-agent
  namespace: k8s-agent
spec:
  podSelector:
    matchLabels:
      app: k8s-agent
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              k8s-agent-access: "true"
      ports:
        - protocol: TCP
          port: 8080
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: monitoring
      ports:
        - protocol: TCP
          port: 8080
  egress:
    - ports:
        - protocol: TCP
          port: 443
    - ports:
        - protocol: TCP
          port: 9092
    - ports:
        - protocol: TCP
          port: 9000
